# jibri-pod-controller

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.avstack  README.md  deny.toml  entrypoint.sh  shell.nix
k8s/: deployments.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml
src/: jibri_schema.rs  main.rs  server.rs  sweeper.rs
