
cargo-features = ["edition2021"]

[package]
name = "jibri-pod-controller"
description = "Detaches Jibri pods from their Deployment when they start recording or livestreaming, and cleans them up when they finish."
version = "0.1.0"
edition = "2021"
authors = ["Jasper Hugo <jasper@avstack.io>"]
license = "MIT/Apache-2.0"

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
futures = { version = "0.3", default-features = false }
hyper = { version = "0.14", default-features = false, features = [
  "client",
  "http1",
  "http2",
  "server",
  "stream",
  "runtime",
  "tcp",
] }
k8s-openapi = { version = "0.13", default-features = false }
kube = { version = "0.64", default-features = false, features = ["openssl-tls", "client"] }
kube-leader-election = { version = "0.4", git = "https://github.com/avstack/kube-leader-election.git", default-features = false }
once_cell = { version = "1", default-features = false }
openssl = { version = "0.10", default-features = false, features = ["vendored"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "parking_lot",
  "signal",
] }
tracing = { version = "0.1", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "parking_lot",
  "registry",
  "smallvec",
  "tracing-log",
] }

[features]
default = ["k8s_v1_21"]
k8s_v1_22 = ["k8s-openapi/v1_22"]
k8s_v1_21 = ["k8s-openapi/v1_21"]
k8s_v1_20 = ["k8s-openapi/v1_20"]
k8s_v1_19 = ["k8s-openapi/v1_19"]
k8s_v1_18 = ["k8s-openapi/v1_18"]
